parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    t_array

Grammar

Rule 0     S' -> s
Rule 1     s -> etiquetas
Rule 2     etiquetas -> etiquetas etiqueta
Rule 3     etiquetas -> etiqueta
Rule 4     sentencias -> sentencias sentencia
Rule 5     sentencias -> sentencia
Rule 6     etiqueta -> iden bipunto sentencias
Rule 7     sentencia -> asignacion
Rule 8     sentencia -> GOTO
Rule 9     sentencia -> UNSET
Rule 10    sentencia -> PRINT
Rule 11    sentencia -> EXIT
Rule 12    sentencia -> ASIGNACION_ARR
Rule 13    sentencia -> as_puntero
Rule 14    ASIGNACION_ARR -> asignado L_ACCESOS asignado exp PTCOMA
Rule 15    UNSET -> t_unset par1 asignado par2 PTCOMA
Rule 16    GOTO -> t_goto iden bipunto
Rule 17    PRINT -> t_print par1 exp par2 PTCOMA
Rule 18    asignacion -> asignado asigna exp PTCOMA
Rule 19    as_puntero -> asignado asigna depuntero asignado PTCOMA
Rule 20    EXIT -> t_exit PTCOMA
Rule 21    asignado -> TEMPORAL
Rule 22    asignado -> puntero
Rule 23    asignado -> direccion
Rule 24    asignado -> parametro
Rule 25    asignado -> devfunc
Rule 26    asignado -> pila
Rule 27    asignado -> iden
Rule 28    exp -> exp1 bxor exp1
Rule 29    exp -> exp1 t_xor exp1
Rule 30    exp -> exp1
Rule 31    exp1 -> exp2 bor exp2
Rule 32    exp1 -> exp2 or exp2
Rule 33    exp1 -> exp2 shiftizq exp2
Rule 34    exp1 -> exp2 shiftder exp2
Rule 35    exp1 -> exp2
Rule 36    exp2 -> exp3 band exp3
Rule 37    exp2 -> exp3 and exp3
Rule 38    exp2 -> exp3
Rule 39    exp3 -> exp4 igual exp4
Rule 40    exp3 -> exp4 diferente exp4
Rule 41    exp3 -> exp4
Rule 42    exp4 -> exp5 mayor exp5
Rule 43    exp4 -> exp5 mayori exp5
Rule 44    exp4 -> exp5 menor exp5
Rule 45    exp4 -> exp5 menori exp5
Rule 46    exp4 -> exp5
Rule 47    exp5 -> exp6 mas exp6
Rule 48    exp5 -> exp6 res exp6
Rule 49    exp5 -> exp6
Rule 50    exp6 -> exp7 por exp7
Rule 51    exp6 -> exp7 div exp7
Rule 52    exp6 -> exp7 mod exp7
Rule 53    exp6 -> t_abs par1 exp7 par2
Rule 54    exp6 -> exp7
Rule 55    exp7 -> res exp11
Rule 56    exp7 -> not exp11
Rule 57    exp7 -> bnot exp11
Rule 58    exp11 -> asignado L_ACCESOS
Rule 59    L_ACCESOS -> L_ACCESOS acceso
Rule 60    L_ACCESOS -> acceso
Rule 61    acceso -> cor1 exp8 cor2
Rule 62    exp11 -> exp8
Rule 63    exp7 -> exp11
Rule 64    exp8 -> string
Rule 65    exp8 -> iden
Rule 66    exp8 -> entero
Rule 67    exp8 -> decimal
Rule 68    exp8 -> TEMPORAL
Rule 69    exp8 -> puntero
Rule 70    exp8 -> direccion
Rule 71    exp8 -> parametro
Rule 72    exp8 -> devfunc
Rule 73    exp8 -> pila
Rule 74    exp8 -> par1 t_int par2 exp
Rule 75    exp8 -> par1 t_float par2 exp
Rule 76    exp8 -> par1 t_char par2 exp
Rule 77    exp8 -> t_read par1 par2

Terminals, with rules where they appear

PTCOMA               : 14 15 17 18 19 20
TEMPORAL             : 21 68
and                  : 37
asigna               : 18 19
band                 : 36
bipunto              : 6 16
bnot                 : 57
bor                  : 31
bxor                 : 28
cor1                 : 61
cor2                 : 61
decimal              : 67
depuntero            : 19
devfunc              : 25 72
diferente            : 40
direccion            : 23 70
div                  : 51
entero               : 66
error                : 
iden                 : 6 16 27 65
igual                : 39
mas                  : 47
mayor                : 42
mayori               : 43
menor                : 44
menori               : 45
mod                  : 52
not                  : 56
or                   : 32
par1                 : 15 17 53 74 75 76 77
par2                 : 15 17 53 74 75 76 77
parametro            : 24 71
pila                 : 26 73
por                  : 50
puntero              : 22 69
res                  : 48 55
shiftder             : 34
shiftizq             : 33
string               : 64
t_abs                : 53
t_array              : 
t_char               : 76
t_exit               : 20
t_float              : 75
t_goto               : 16
t_int                : 74
t_print              : 17
t_read               : 77
t_unset              : 15
t_xor                : 29

Nonterminals, with rules where they appear

ASIGNACION_ARR       : 12
EXIT                 : 11
GOTO                 : 8
L_ACCESOS            : 14 58 59
PRINT                : 10
UNSET                : 9
acceso               : 59 60
as_puntero           : 13
asignacion           : 7
asignado             : 14 14 15 18 19 19 58
etiqueta             : 2 3
etiquetas            : 1 2
exp                  : 14 17 18 74 75 76
exp1                 : 28 28 29 29 30
exp11                : 55 56 57 63
exp2                 : 31 31 32 32 33 33 34 34 35
exp3                 : 36 36 37 37 38
exp4                 : 39 39 40 40 41
exp5                 : 42 42 43 43 44 44 45 45 46
exp6                 : 47 47 48 48 49
exp7                 : 50 50 51 51 52 52 53 54
exp8                 : 61 62
s                    : 0
sentencia            : 4 5
sentencias           : 4 6

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . etiquetas
    (2) etiquetas -> . etiquetas etiqueta
    (3) etiquetas -> . etiqueta
    (6) etiqueta -> . iden bipunto sentencias

    iden            shift and go to state 4

    s                              shift and go to state 1
    etiquetas                      shift and go to state 2
    etiqueta                       shift and go to state 3

state 1

    (0) S' -> s .



state 2

    (1) s -> etiquetas .
    (2) etiquetas -> etiquetas . etiqueta
    (6) etiqueta -> . iden bipunto sentencias

    $end            reduce using rule 1 (s -> etiquetas .)
    iden            shift and go to state 4

    etiqueta                       shift and go to state 5

state 3

    (3) etiquetas -> etiqueta .

    iden            reduce using rule 3 (etiquetas -> etiqueta .)
    $end            reduce using rule 3 (etiquetas -> etiqueta .)


state 4

    (6) etiqueta -> iden . bipunto sentencias

    bipunto         shift and go to state 6


state 5

    (2) etiquetas -> etiquetas etiqueta .

    iden            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)
    $end            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)


state 6

    (6) etiqueta -> iden bipunto . sentencias
    (4) sentencias -> . sentencias sentencia
    (5) sentencias -> . sentencia
    (7) sentencia -> . asignacion
    (8) sentencia -> . GOTO
    (9) sentencia -> . UNSET
    (10) sentencia -> . PRINT
    (11) sentencia -> . EXIT
    (12) sentencia -> . ASIGNACION_ARR
    (13) sentencia -> . as_puntero
    (18) asignacion -> . asignado asigna exp PTCOMA
    (16) GOTO -> . t_goto iden bipunto
    (15) UNSET -> . t_unset par1 asignado par2 PTCOMA
    (17) PRINT -> . t_print par1 exp par2 PTCOMA
    (20) EXIT -> . t_exit PTCOMA
    (14) ASIGNACION_ARR -> . asignado L_ACCESOS asignado exp PTCOMA
    (19) as_puntero -> . asignado asigna depuntero asignado PTCOMA
    (21) asignado -> . TEMPORAL
    (22) asignado -> . puntero
    (23) asignado -> . direccion
    (24) asignado -> . parametro
    (25) asignado -> . devfunc
    (26) asignado -> . pila
    (27) asignado -> . iden

    t_goto          shift and go to state 18
    t_unset         shift and go to state 19
    t_print         shift and go to state 20
    t_exit          shift and go to state 21
    TEMPORAL        shift and go to state 22
    puntero         shift and go to state 23
    direccion       shift and go to state 24
    parametro       shift and go to state 25
    devfunc         shift and go to state 26
    pila            shift and go to state 27
    iden            shift and go to state 7

    sentencias                     shift and go to state 8
    sentencia                      shift and go to state 9
    asignacion                     shift and go to state 10
    GOTO                           shift and go to state 11
    UNSET                          shift and go to state 12
    PRINT                          shift and go to state 13
    EXIT                           shift and go to state 14
    ASIGNACION_ARR                 shift and go to state 15
    as_puntero                     shift and go to state 16
    asignado                       shift and go to state 17

state 7

    (27) asignado -> iden .

    asigna          reduce using rule 27 (asignado -> iden .)
    cor1            reduce using rule 27 (asignado -> iden .)
    t_abs           reduce using rule 27 (asignado -> iden .)
    res             reduce using rule 27 (asignado -> iden .)
    not             reduce using rule 27 (asignado -> iden .)
    bnot            reduce using rule 27 (asignado -> iden .)
    TEMPORAL        reduce using rule 27 (asignado -> iden .)
    puntero         reduce using rule 27 (asignado -> iden .)
    direccion       reduce using rule 27 (asignado -> iden .)
    parametro       reduce using rule 27 (asignado -> iden .)
    devfunc         reduce using rule 27 (asignado -> iden .)
    pila            reduce using rule 27 (asignado -> iden .)
    iden            reduce using rule 27 (asignado -> iden .)
    string          reduce using rule 27 (asignado -> iden .)
    entero          reduce using rule 27 (asignado -> iden .)
    decimal         reduce using rule 27 (asignado -> iden .)
    par1            reduce using rule 27 (asignado -> iden .)
    t_read          reduce using rule 27 (asignado -> iden .)
    par2            reduce using rule 27 (asignado -> iden .)
    PTCOMA          reduce using rule 27 (asignado -> iden .)


state 8

    (6) etiqueta -> iden bipunto sentencias .
    (4) sentencias -> sentencias . sentencia
    (7) sentencia -> . asignacion
    (8) sentencia -> . GOTO
    (9) sentencia -> . UNSET
    (10) sentencia -> . PRINT
    (11) sentencia -> . EXIT
    (12) sentencia -> . ASIGNACION_ARR
    (13) sentencia -> . as_puntero
    (18) asignacion -> . asignado asigna exp PTCOMA
    (16) GOTO -> . t_goto iden bipunto
    (15) UNSET -> . t_unset par1 asignado par2 PTCOMA
    (17) PRINT -> . t_print par1 exp par2 PTCOMA
    (20) EXIT -> . t_exit PTCOMA
    (14) ASIGNACION_ARR -> . asignado L_ACCESOS asignado exp PTCOMA
    (19) as_puntero -> . asignado asigna depuntero asignado PTCOMA
    (21) asignado -> . TEMPORAL
    (22) asignado -> . puntero
    (23) asignado -> . direccion
    (24) asignado -> . parametro
    (25) asignado -> . devfunc
    (26) asignado -> . pila
    (27) asignado -> . iden

  ! shift/reduce conflict for iden resolved as shift
    $end            reduce using rule 6 (etiqueta -> iden bipunto sentencias .)
    t_goto          shift and go to state 18
    t_unset         shift and go to state 19
    t_print         shift and go to state 20
    t_exit          shift and go to state 21
    TEMPORAL        shift and go to state 22
    puntero         shift and go to state 23
    direccion       shift and go to state 24
    parametro       shift and go to state 25
    devfunc         shift and go to state 26
    pila            shift and go to state 27
    iden            shift and go to state 7

  ! iden            [ reduce using rule 6 (etiqueta -> iden bipunto sentencias .) ]

    sentencia                      shift and go to state 28
    asignacion                     shift and go to state 10
    GOTO                           shift and go to state 11
    UNSET                          shift and go to state 12
    PRINT                          shift and go to state 13
    EXIT                           shift and go to state 14
    ASIGNACION_ARR                 shift and go to state 15
    as_puntero                     shift and go to state 16
    asignado                       shift and go to state 17

state 9

    (5) sentencias -> sentencia .

    t_goto          reduce using rule 5 (sentencias -> sentencia .)
    t_unset         reduce using rule 5 (sentencias -> sentencia .)
    t_print         reduce using rule 5 (sentencias -> sentencia .)
    t_exit          reduce using rule 5 (sentencias -> sentencia .)
    TEMPORAL        reduce using rule 5 (sentencias -> sentencia .)
    puntero         reduce using rule 5 (sentencias -> sentencia .)
    direccion       reduce using rule 5 (sentencias -> sentencia .)
    parametro       reduce using rule 5 (sentencias -> sentencia .)
    devfunc         reduce using rule 5 (sentencias -> sentencia .)
    pila            reduce using rule 5 (sentencias -> sentencia .)
    iden            reduce using rule 5 (sentencias -> sentencia .)
    $end            reduce using rule 5 (sentencias -> sentencia .)


state 10

    (7) sentencia -> asignacion .

    t_goto          reduce using rule 7 (sentencia -> asignacion .)
    t_unset         reduce using rule 7 (sentencia -> asignacion .)
    t_print         reduce using rule 7 (sentencia -> asignacion .)
    t_exit          reduce using rule 7 (sentencia -> asignacion .)
    TEMPORAL        reduce using rule 7 (sentencia -> asignacion .)
    puntero         reduce using rule 7 (sentencia -> asignacion .)
    direccion       reduce using rule 7 (sentencia -> asignacion .)
    parametro       reduce using rule 7 (sentencia -> asignacion .)
    devfunc         reduce using rule 7 (sentencia -> asignacion .)
    pila            reduce using rule 7 (sentencia -> asignacion .)
    iden            reduce using rule 7 (sentencia -> asignacion .)
    $end            reduce using rule 7 (sentencia -> asignacion .)


state 11

    (8) sentencia -> GOTO .

    t_goto          reduce using rule 8 (sentencia -> GOTO .)
    t_unset         reduce using rule 8 (sentencia -> GOTO .)
    t_print         reduce using rule 8 (sentencia -> GOTO .)
    t_exit          reduce using rule 8 (sentencia -> GOTO .)
    TEMPORAL        reduce using rule 8 (sentencia -> GOTO .)
    puntero         reduce using rule 8 (sentencia -> GOTO .)
    direccion       reduce using rule 8 (sentencia -> GOTO .)
    parametro       reduce using rule 8 (sentencia -> GOTO .)
    devfunc         reduce using rule 8 (sentencia -> GOTO .)
    pila            reduce using rule 8 (sentencia -> GOTO .)
    iden            reduce using rule 8 (sentencia -> GOTO .)
    $end            reduce using rule 8 (sentencia -> GOTO .)


state 12

    (9) sentencia -> UNSET .

    t_goto          reduce using rule 9 (sentencia -> UNSET .)
    t_unset         reduce using rule 9 (sentencia -> UNSET .)
    t_print         reduce using rule 9 (sentencia -> UNSET .)
    t_exit          reduce using rule 9 (sentencia -> UNSET .)
    TEMPORAL        reduce using rule 9 (sentencia -> UNSET .)
    puntero         reduce using rule 9 (sentencia -> UNSET .)
    direccion       reduce using rule 9 (sentencia -> UNSET .)
    parametro       reduce using rule 9 (sentencia -> UNSET .)
    devfunc         reduce using rule 9 (sentencia -> UNSET .)
    pila            reduce using rule 9 (sentencia -> UNSET .)
    iden            reduce using rule 9 (sentencia -> UNSET .)
    $end            reduce using rule 9 (sentencia -> UNSET .)


state 13

    (10) sentencia -> PRINT .

    t_goto          reduce using rule 10 (sentencia -> PRINT .)
    t_unset         reduce using rule 10 (sentencia -> PRINT .)
    t_print         reduce using rule 10 (sentencia -> PRINT .)
    t_exit          reduce using rule 10 (sentencia -> PRINT .)
    TEMPORAL        reduce using rule 10 (sentencia -> PRINT .)
    puntero         reduce using rule 10 (sentencia -> PRINT .)
    direccion       reduce using rule 10 (sentencia -> PRINT .)
    parametro       reduce using rule 10 (sentencia -> PRINT .)
    devfunc         reduce using rule 10 (sentencia -> PRINT .)
    pila            reduce using rule 10 (sentencia -> PRINT .)
    iden            reduce using rule 10 (sentencia -> PRINT .)
    $end            reduce using rule 10 (sentencia -> PRINT .)


state 14

    (11) sentencia -> EXIT .

    t_goto          reduce using rule 11 (sentencia -> EXIT .)
    t_unset         reduce using rule 11 (sentencia -> EXIT .)
    t_print         reduce using rule 11 (sentencia -> EXIT .)
    t_exit          reduce using rule 11 (sentencia -> EXIT .)
    TEMPORAL        reduce using rule 11 (sentencia -> EXIT .)
    puntero         reduce using rule 11 (sentencia -> EXIT .)
    direccion       reduce using rule 11 (sentencia -> EXIT .)
    parametro       reduce using rule 11 (sentencia -> EXIT .)
    devfunc         reduce using rule 11 (sentencia -> EXIT .)
    pila            reduce using rule 11 (sentencia -> EXIT .)
    iden            reduce using rule 11 (sentencia -> EXIT .)
    $end            reduce using rule 11 (sentencia -> EXIT .)


state 15

    (12) sentencia -> ASIGNACION_ARR .

    t_goto          reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    t_unset         reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    t_print         reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    t_exit          reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    TEMPORAL        reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    puntero         reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    direccion       reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    parametro       reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    devfunc         reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    pila            reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    iden            reduce using rule 12 (sentencia -> ASIGNACION_ARR .)
    $end            reduce using rule 12 (sentencia -> ASIGNACION_ARR .)


state 16

    (13) sentencia -> as_puntero .

    t_goto          reduce using rule 13 (sentencia -> as_puntero .)
    t_unset         reduce using rule 13 (sentencia -> as_puntero .)
    t_print         reduce using rule 13 (sentencia -> as_puntero .)
    t_exit          reduce using rule 13 (sentencia -> as_puntero .)
    TEMPORAL        reduce using rule 13 (sentencia -> as_puntero .)
    puntero         reduce using rule 13 (sentencia -> as_puntero .)
    direccion       reduce using rule 13 (sentencia -> as_puntero .)
    parametro       reduce using rule 13 (sentencia -> as_puntero .)
    devfunc         reduce using rule 13 (sentencia -> as_puntero .)
    pila            reduce using rule 13 (sentencia -> as_puntero .)
    iden            reduce using rule 13 (sentencia -> as_puntero .)
    $end            reduce using rule 13 (sentencia -> as_puntero .)


state 17

    (18) asignacion -> asignado . asigna exp PTCOMA
    (14) ASIGNACION_ARR -> asignado . L_ACCESOS asignado exp PTCOMA
    (19) as_puntero -> asignado . asigna depuntero asignado PTCOMA
    (59) L_ACCESOS -> . L_ACCESOS acceso
    (60) L_ACCESOS -> . acceso
    (61) acceso -> . cor1 exp8 cor2

    asigna          shift and go to state 29
    cor1            shift and go to state 32

    L_ACCESOS                      shift and go to state 30
    acceso                         shift and go to state 31

state 18

    (16) GOTO -> t_goto . iden bipunto

    iden            shift and go to state 33


state 19

    (15) UNSET -> t_unset . par1 asignado par2 PTCOMA

    par1            shift and go to state 34


state 20

    (17) PRINT -> t_print . par1 exp par2 PTCOMA

    par1            shift and go to state 35


state 21

    (20) EXIT -> t_exit . PTCOMA

    PTCOMA          shift and go to state 36


state 22

    (21) asignado -> TEMPORAL .
